--- a/css/style2.css
+++ b/css/style2.css
@@ -1,6 +1,6 @@
-		body {
+	/*	body {
 		  -webkit-font-smoothing: antialiased;
-		}
+		}*/
 
 		section {
 		  background: #fff;
@@ -8,7 +8,7 @@
 		  padding: 2em 0 8em;
 		  min-height: 100vh;
 		  position: relative;
-		  -webkit-font-smoothing: antialiased;
+		  /*-webkit-font-smoothing: antialiased;*/
 		}
 
 		.pricing {
@@ -32,6 +32,7 @@
 		  text-align: center;
 		  -webkit-flex: 0 1 330px;
 		  flex: 0 1 330px;
+		   transition: transform .2s; /* Animation */
 		}
 		.pricing-action {
 		  color: inherit;
@@ -45,20 +46,34 @@
 		.pricing-feature-list {
 		  text-align: left;
 		}
+		
+		.pricing-feature-list-ent {
+		  text-align: center;
+		}
+
+		.pricing-feature-ent {
+			padding: 6em 3em 2em;
+			font-size: 0.9em;
+			line-height: 1.7em;
+			text-align: left;
+			font-weight: 100;
+
+		}
 
 		.pricing-palden .pricing-item {
-		  font-family: 'Open Sans', sans-serif;
+		  /*font-family: 'Open Sans', sans-serif;*/
+		  font-family: 'Montserrat', sans-serif;
 		  cursor: default;
-		  color: #444;
+		  color: #666;
 		  background: #fff;
 		  box-shadow: 0 0 10px rgba(46, 59, 125, 0.23);
-		  border-radius: 20px 20px 10px 10px;
+		  border-radius: 25px 25px 25px 25px;
 		  margin: 1em;
 		}
 
 		@media screen and (min-width: 66.25em) {
 		  .pricing-palden .pricing-item {
-		    margin: 1em -0.5em;
+		    margin: 1em 1em;
 		  }
 
 		  .pricing-palden .pricing__item--featured {
@@ -70,8 +85,9 @@
 		.pricing-palden .pricing-deco {
 		  border-radius: 25px 25px 0 0;
 		  background: rgba(200, 200, 200, 0.99);
-		  padding: 4em 0 9em;
+		  padding: 3em 0 1em;
 		  position: relative;
+		  box-shadow: 0 3px 3px #ccc;
 		}
 		.pricing-palden .pricing-deco-img {
 		  position: absolute;
@@ -80,12 +96,20 @@
 		  width: 100%;
 		  height: 160px;
 		}
-		.pricing-palden .pricing-title {
-		  font-size: 0.75em;
+/*		.pricing-palden .pricing-title {
+		  font-size: 1.15em;
 		  margin: 0;
 		  text-transform: uppercase;
 		  letter-spacing: 5px;
 		  color: #fff;
+		}*/
+		.pricing-palden .pricing-subtitle{
+			font-size: 0.8em;
+			font-weight: bold;
+			padding-right: 14pt;
+			padding-left: 14pt;
+			
+			color: rgba(255,255,255,0.9);
 		}
 		.pricing-palden .deco-layer {
 		  -webkit-transition: -webkit-transform 0.5s;
@@ -103,19 +127,19 @@
 		  font-size: 2.5em;
 		}
 		.pricing-palden .pricing-price {
-		  font-size: 5em;
-		  font-weight: bold;
-		  padding: 0;
-		  color: #fff;
+		  font-size: 1.2em;
+		  font-weight: 800;
+		  padding: 1em 0 0em;
+		  color: #0071c0;
 		  margin: 0 0 0.25em 0;
-		  line-height: 0.75;
+		  /*line-height: 0.75;*/
 		}
 		.pricing-palden .pricing-currency {
-		  font-size: 0.15em;
+		  font-size: 0.55em;
 		  vertical-align: top;
 		}
 		.pricing-palden .pricing-period {
-		  font-size: 0.15em;
+		  font-size: 0.40em;
 		  padding: 0 0 0 0.5em;
 		  font-style: italic;
 		}
@@ -126,22 +150,25 @@
 		}
 		.pricing-palden .pricing-feature-list {
 		  margin: 0;
-		  padding: 0 0 2.5em;
+		  padding: 1em 2em 2.5em;
 		  list-style: none;
-		  text-align: center;
+		  text-align: none;
 		}
 		.pricing-palden .pricing-feature {
 		  padding: 0.5em 0;
+		  font-size: 0.9em;
+		  font-weight: bold;
 		}
 		.pricing-palden .pricing-action {
 		  font-weight: bold;
-		  margin: auto 3em 2em 3em;
-		  padding: 1em 2em;
+		  margin: auto 5em 2em 5em;
+		  padding: 0.8em 2em;
 		  color: #fff;
 		  border-radius: 30px;
-		  background: #005A9C;
+		  background: #9cc34d;
 		  -webkit-transition: background-color 0.3s;
 		  transition: background-color 0.3s;
+		  box-shadow: 0 2px 4px #aaa;
 		}
 		.pricing-palden .pricing-action:hover, .pricing-palden .pricing-action:focus {
 		  background-color: #FFA500;
@@ -152,17 +179,57 @@
 		}
 
 		.pricing-palden .silver {
-			background-color: #a0a0a0;
+			background-color: #989898;
 		}	
 
 		.pricing-palden .gold {
-			background-color: #FFA500;
+			background-color: #f6921e;
 		}
 		.pricing-palden .enterprise {
-			background-color: #005A9C;
+			background-color: #0071c0;
 		}
 		.pricing-palden .comingsoon {
 			font-size: 2.5em;
 			line-height: 1em;
 			margin-bottom: 0.25em;
+			color: #444;
+		}
+		.pricing-palden .pricing-cut {
+			font-size: 1em;
+			font-weight: bold;
+			margin: 0;
+			padding: 0;
+			color:#989898;
+		}
+
+		.pricing-palden .small{
+			font-size: 0.8em;
+		}
+		a {
+			text-decoration: none;
+		}
+
+		.fas {
+			color: #9cc34d;
+			float:right;
+			font-size: 1.2em;
+		}
+		.pricing-palden .strikeout {
+
+		  line-height: 1em;
+		  position: relative;
+		}
+		.pricing-palden .strikeout::after {
+		  border-bottom: 0.125em solid #f6921e;
+		  content: "";
+		  left: 0;
+		  margin-top: calc(0.125em / 4);
+		  position: absolute;
+		  right: 0;
+		  top: 50%;
+		}
+
+		.pricing-item:hover {
+			transform: scale(1.07);
+			z-index: 100;
 		}
